# smurff

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  pyproject.toml  readthedocs.yaml  setup.py  vcpkg.json
.github/workflows/: build_linux.yml  conda.yml  docs.yml  wheels.yml
ci/: .actrc  azure-pipelines.yml  conda-steps.yml  highfive.rb
ci/buildwheel/: .gitignore  Dockerfile  Dockerfile.manylinux  Dockerfile.musllinux  build_hdf5.sh  install_deps.sh  install_hdf5.py  install_hdf5.sh  install_openblas.sh  linux.sh  macos.sh
ci/converted/audit/: audit_summary.md  config.yml  workflow_usage.csv
ci/converted/audit/pipelines/smurff/ExaScience.smurff/: config.json  source.yml
ci/converted/audit/pipelines/smurff/ExaScience.smurff/.github/actions/ci_conda_steps/: action.yml
ci/converted/audit/pipelines/smurff/ExaScience.smurff/.github/workflows/: exascience.smurff.yml
ci/docker/: Dockerfile.alpine  Dockerfile.manylinux  Dockerfile.musllinux  Dockerfile.ubuntu  build_manylinux.sh  build_script.sh  build_ubuntu.sh
ci/ubuntu1910/: Dockerfile  build_script.sh
ci/ubuntu2004/: Dockerfile  build_script.sh
ci/ubuntu2204/: Dockerfile  build_script.sh
ci/vcpkg/ports/highfive/: CONTROL  portfile.cmake
cmake/: DependenciesConfig.cmake
conda-recipes/: conda_build_config.yaml  devtools.yml
conda-recipes/eigen3/: meta.yaml
conda-recipes/highfive/: meta.yaml
conda-recipes/smurff/: bld.bat  build.sh  meta.yaml  run_test.bat  run_test.sh
conda-recipes/smurff-0.15.0/: blas_build.sh  meta.yaml
conda-recipes/smurff-latest/: meta.yaml
cpp/: .gitignore  Doxyfile
cpp/Smurff/: CMakeLists.txt  smurff.cpp
cpp/SmurffCpp/: CMakeLists.txt  ResultItem.h  Types.h  Version.h  result.cpp  result.h
cpp/SmurffCpp/Configs/: Config.cpp  Config.h  DataConfig.cpp
cpp/SmurffCpp/Predict/: PredictSession.cpp  PredictSession.h
cpp/SmurffCpp/Priors/: ILatentPrior.cpp
cpp/SmurffCpp/Sessions/: CmdSession.cpp  TrainSession.cpp
cpp/SmurffCpp/SideInfo/: SparseSideInfo.cpp
cpp/SmurffCpp/Utils/: Error.h  HDF5Group.cpp  HDF5Group.h  PVec.hpp  SaveState.cpp  Tensor.h
cpp/Tests/: CMakeLists.txt  Tests.h  TestsDistribution.cpp  TestsInputData.cpp  TestsInputValidation.cpp  TestsLinop.cpp  TestsMatrixVsTensor.cpp  TestsPVec.cpp  TestsPredict.cpp  TestsRandom.cpp  TestsSmurff.cpp  TestsSparseSideInfo.cpp  TestsTensorData.cpp  tests.cpp
cpp/Tests/expected_double/: TestsSmurff_ExpectedResults.h
data/jaak/: test_py.py
data/movielens/: .gitignore  preprocess_movielens.py  read_movielens.py  test_predict.py  test_py.py
data/oom/: test_oom.py
docs/: INSTALL.rst  Makefile  conf.py  requirements.txt
docs/notebooks/: .gitignore  Makefile  a_first_example.ipynb  bmf_with_posterior_propagation.ipynb  centering.ipynb  different_methods.ipynb  different_noise_models.ipynb  inference_with_smurff.ipynb  input_matrices_and_tensors.ipynb  syn_out_matrix_prediction.ipynb
lib/smurff-cpp/SmurffCpp/Utils/: PVec.hpp  StepFile.cpp
lib/smurff-cpp/cmake/scripts/: FindPythonExtensions.cmake
python/: CMakeLists.txt
python/smurff/: __init__.py  changes_still_to_apply_predict.py  helper.py  predict.py  prepare.py  trainsession.py  wrapper.cpp
python/smurff/include/: TensorConfig.pxd
python/smurff/smurff/: __init__.py  helper.py  predict.py  prepare.py  result.py  wrapper.pyx
python/smurff/test/: test_bpmf.py  test_macau.py  test_noisemodels.py  test_predict.py  test_smurff.py
python/test/: test_bpmf.py  test_centering.py  test_gfa.py  test_input.py  test_macau.py  test_noisemodels.py  test_pp.py  test_predict.py  test_predict_sideinfo.py  test_pybind.py  test_scarce.py  test_smurff.py
