[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm",
    "pybind11",
    "scikit-build-core",
    "cmake>=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/smurff/_version.py"]
cmake.verbose = true
logging.level = "INFO"

[tool.scikit-build.cmake.define]
ENABLE_BOOST = "OFF"
ENABLE_CMDLINE = "OFF"
ENABLE_TESTS = "OFF"

[tool.setuptools_scm]  # Section required
write_to = "python/smurff/_version.py"

[tool.setuptools]
package-dir = {"" = "python"}

[project]
name = "smurff"
dynamic = ["version"]
description = "Bayesian Factorization Methods"
keywords = ["bayesian factorization machine-learning high-dimensional side-information"]
readme = "README.rst"
authors = [
    {name = "Tom Vander Aa", email = "Tom.VanderAa@imec.be"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "h5sparse-tensor",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]
license = {text = "MIT"}

[project.urls]
Homepage = "http://github.com/ExaScience/smurff"

[project.scripts]
py_smurff = "smurff.cmdline:main"
